# AnthropicHackathon-BabySoothingSystem

./: .gitignore  README.md
backend/: ReadME.md  pyproject.toml
backend/baby-soothing-system/agent/: baby_soothing_agent.py  backup.py
backend/baby-soothing-system/detector/: baby_cry_detector_service.py  live_baby_cry_yamnet.py
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CryingDetectionWindow.tsx  FloatingElements.tsx  Layout.tsx  SimulationWindow.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/pages/: AvatarDemo.tsx  CreateAvatar.tsx  Home.tsx  MonitorSimulation.tsx  NotFound.tsx
